[package]
name = "neonboxcars"
version = "1.0.0"
authors = ["KyleCulp <me@kyleculp.com>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neonboxcars"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
boxcars = "0.8.1"
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 'z'